<resources>
    <string name="app_name">RunForHealth</string>
    <string name="run">跑步</string>
    <string name="chat">会话</string>
    <string name="book">通讯录</string>
    <string name="set">设置</string>
    <string name="action_settings">Settings</string>
    <string name="login_username_hint">请输入用户名…</string>
    <string name="login_password_hint">请输入密码…</string>
    <string name="complete_register">完成注册</string>

    <string name="new_friends">新的朋友</string>
    <string name="add_friends">添加好友</string>
    <string name="search">搜索</string>
    <string name="sport">发起运动</string>
    <string name="sportHistory">运动记录</string>
    <string name="about">关于我们</string>
    <string name="clock">消息提示</string>
    <string name="exit_app">退出登陆</string>

    <string name="camera">照相机</string>
    <string name="picture">图片</string>
    <string name="location">位置</string>
    <string name="record">按住 录音</string>

    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    <string name="voice_short_tips">录音时间太短</string>

    <string name="run_add_friend">想运动 点我</string>
</resources>
