<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:id="@+id/layout_chat_add"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layout_add_picture"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:orientation="vertical">
            <ImageView
                style="@style/MoreFunctionSize"
                android:background="@drawable/include_chat_more_photo"/>
            <TextView
                android:id="@+id/tv_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="@dimen/remindOfTextSize"
                android:text="@string/picture" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_add_camera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:orientation="vertical">
            <ImageView
                style="@style/MoreFunctionSize"
                android:background="@drawable/include_chat_more_camera"/>
            <TextView
                android:id="@+id/tv_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="@dimen/remindOfTextSize"
                android:text="@string/camera" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_add_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:orientation="vertical">
            <ImageView
                style="@style/MoreFunctionSize"
                android:background="@drawable/include_chat_more_location"/>
            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="@dimen/remindOfTextSize"
                android:text="@string/location"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:orientation="vertical">
        </LinearLayout>


    </LinearLayout>

</layout>
